--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+		font-weight: 300;
+		min-height: 100vh;
+		background-color: white;
+		margin: 0;
+		padding: 0;
+    
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+	h1, h2, h3, h4, h5, h6 {
+		font-weight: 500;
+		font-family: 'Raleway', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	}
+
+	button, label {
+		font-family: 'Raleway', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	}
